--- a/style.css
+++ b/style.css
@@ -1,4 +1,34 @@
-h1 {
-    text-align: end;
+* {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
-    
+header {
+    font-size: 1rem;
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+header h2 {
+    margin-right: 30px;
+}
+main {
+   text-align: center;
+   margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+   
+
+}
+main h3 {
+    font-size: 2rem;
+}
+main p {
+
+   
+    font-size: 1.2rem;
+}
+.button {
+    background-color: blueviolet;
+    color: lightcyan;
+    font-size: 1.2rem;
+}   
