--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 * {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
+:root {
+    --violet: blueviolet;
+    --light: lightcyan;
+}
 header {
     font-size: 1rem;
     font-family: Arial, Helvetica, sans-serif;
@@ -8,7 +12,12 @@ header {
     justify-content: space-between;
     align-items: center;
 }
-header h2 {
+header nav a {
+    font-size: 1.2rem;
+    color: var(--violet);
+    text-decoration: none;
+}
+header h1 {
     margin-right: 30px;
 }
 main {
@@ -19,7 +28,7 @@ main {
    
 
 }
-main h3 {
+main h2 {
     font-size: 2rem;
 }
 main p {
@@ -28,7 +37,13 @@ main p {
     font-size: 1.2rem;
 }
 .button {
-    background-color: blueviolet;
-    color: lightcyan;
+    background-color: var(--violet);
+    color: var(--light);
     font-size: 1.2rem;
+}
+li button{
+    color: var(--light);
+    background-color: var(--violet);
+    display: flex;
+    
 }   
