--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,10 @@ li button{
     
     
 }   
-.hidden {
+/* .hidden {
     display: none;
-}
+} */
+
+/* #enterName::before {
+    content: "Enter Intials";
+} */
